Use the commonly used date format for german.

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -147,7 +147,7 @@ de:
     - Freitag
     - Samstag
     formats:
-      default: "%Y-%m-%d"
+      default: "%d.%m.%Y"
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
