--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,6 +6,7 @@ en:
     date:
       formats:
         default: '%B %-d, %Y'
+        with_time: '%B %-d, %Y at %H:%M'
       month_names:
       -
       - January
