--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -6,6 +6,7 @@ ru:
     date:
       formats:
         default: '%-d %B %Y'
+        with_time: '%-d %B %Y в %H:%M'
       month_names:
       -
       - январь
